--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="scripts/script.js">
-    <script src="https://apis.google.com/js/client.js?onload=checkAuth">
-    </script>
+    <script type="scripts/script.js"></script>
+    <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
   </head>
   <body>
     <div id="authorize-div" style="display: none">
