--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="scripts/script.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
   </head>
-  <body class="container">
+  <body class="container" ng-controller="app">
     <div id="header" class="row">
       <h1>Mills 561 Schedule</h1>
     </div>
