Trying this ngGAPI thing.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <!-- Custom JS -->
     <script src="scripts/script.js"></script>
 
+    <!-- Bower -->
+    <script src="bower_components/ngGAPI/gapi.js"></script>
+
     <!-- Google Calendar API -->
     <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
   </head>
