--- a/index.html
+++ b/index.html
@@ -5,35 +5,24 @@
     <title>Mills 561 Schedule</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap -->
+    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-    <!-- jQuery -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-
-    <!-- Angular -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js"></script>
-
-    <!-- Bootstrap JavaScript -->
+    <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <!-- Custom JS -->
+    <!-- Custom js and api -->
     <script src="scripts/script.js"></script>
-
-    <!-- Bower -->
-    <script src="bower_components/ngGAPI/gapi.js"></script>
-
-    <!-- Google Calendar API -->
     <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
   </head>
-  <body ng-app="calendar" ng-controller="app" class="container" ng-init="loadCalendarApi()">
+  <body class="container">
     <div id="header" class="row">
       <h1>Mills 561 Schedule</h1>
     </div>
     <div id="authorize-div" style="display: none">
       <span>Authorize access to Google Calendar API</span>
       <!--Button for the user to click to initiate auth sequence -->
-      <button id="authorize-button" onclick="$handleAuthClick(event)">
+      <button id="authorize-button" onclick="handleAuthClick(event)">
         Authorize
       </button>
     </div>
