added in columns for everybody.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,32 @@
         Authorize
       </button>
     </div>
+    <div class="row">
+      <div class="col-xs-1" id="david">
+        <h3>David</h3>
+      </div>
+      <div class="col-xs-1" id="shawn">
+        <h3>Shawn</h3>
+      </div>
+      <div class="col-xs-1" id="nick">
+        <h3>Nick</h3>
+      </div>
+      <div class="col-xs-1" id="kyle">
+        <h3>Kyle</h3>
+      </div>
+      <div class="col-xs-1" id="eric">
+        <h3>Eric</h3>
+      </div>
+      <div class="col-xs-1" id="ethanp">
+        <h3>Ethan P</h3>
+      </div>
+      <div class="col-xs-1" id="justin">
+        <h3>Justin</h3>
+      </div>
+      <div class="col-xs-1" id="ethang">
+        <h3>Ethan G</h3>
+      </div>
+    </div>
     <pre id="output"></pre>
   </body>
 </html>
