--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
       <div class="col-xs-1" id="ethanp">
         <h3>Ethan P</h3>
       </div>
+      <div class="col-xs-1" id="sebastian">
+        <h3>Sebastian</h3>
+      </div>
       <div class="col-xs-1" id="justin">
         <h3>Justin</h3>
       </div>
