--- a/index.html
+++ b/index.html
@@ -51,13 +51,15 @@
       <div class="col-xs-2" id="sebastian">
         <h3>Sebastian</h3>
       </div>
+      <div class="col-xs-1" id="colin">
+        <h3>Colin</h3>
+      </div>
       <div class="col-xs-1" id="justin">
         <h3>Justin</h3>
       </div>
-      <div class="col-xs-1" id="ethang">
+      <div class="col-xs-2" id="ethang">
         <h3>Ethan G</h3>
       </div>
     </div>
-    <pre id="output"></pre>
   </body>
 </html>
