--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       <div class="col-xs-2" id="sebastian">
         <h3>Sebastian</h3>
       </div>
-      <div class="col-xs-1" id="colin">
-        <h3>Colin</h3>
+      <div class="col-xs-1" id="steve">
+        <h3>Steve</h3>
       </div>
       <div class="col-xs-1" id="justin">
         <h3>Justin</h3>
