--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
   </head>
   <body class="container">
-    <div id="header" class="row">
+    <div id="header" class="row text-center">
       <h1>Mills 561 Schedule</h1>
     </div>
     <div id="authorize-div" style="display: none">
@@ -29,35 +29,39 @@
         Authorize
       </button>
     </div>
-    <div class="row">
-      <div class="col-xs-1" id="david">
+    <div class="row text-center">
+      <div class="col-xs-3" id="david">
         <h3>David</h3>
       </div>
-      <div class="col-xs-1" id="shawn">
+      <div class="col-xs-3" id="shawn">
         <h3>Shawn</h3>
       </div>
-      <div class="col-xs-1" id="nick">
+      <div class="col-xs-3" id="nick">
         <h3>Nick</h3>
       </div>
-      <div class="col-xs-1" id="kyle">
+      <div class="col-xs-3" id="kyle">
         <h3>Kyle</h3>
       </div>
-      <div class="col-xs-1" id="eric">
+    </div>
+    <div class="row text-center">
+      <div class="col-xs-3" id="eric">
         <h3>Eric</h3>
       </div>
-      <div class="col-xs-1" id="ethanp">
+      <div class="col-xs-3" id="ethanp">
         <h3>Ethan P</h3>
       </div>
-      <div class="col-xs-2" id="sebastian">
+      <div class="col-xs-4" id="sebastian">
         <h3>Sebastian</h3>
       </div>
-      <div class="col-xs-1" id="steve">
+    </div>
+    <div class="row text-center">
+      <div class="col-xs-3" id="steve">
         <h3>Steve</h3>
       </div>
-      <div class="col-xs-1" id="justin">
+      <div class="col-xs-3" id="justin">
         <h3>Justin</h3>
       </div>
-      <div class="col-xs-2" id="ethang">
+      <div class="col-xs-3" id="ethang">
         <h3>Ethan G</h3>
       </div>
     </div>
