Added Colin and will and message if something is blank. Also added support for if someone has no locations in calendar, shows special message.

--- a/index.html
+++ b/index.html
@@ -30,24 +30,21 @@
       </button>
     </div>
     <div class="row text-center">
-      <div class="col-xs-3" id="david">
+      <div class="col-xs-4" id="david">
         <h3>David</h3>
       </div>
-      <div class="col-xs-3" id="shawn">
+      <div class="col-xs-4" id="shawn">
         <h3>Shawn</h3>
       </div>
-      <div class="col-xs-3" id="nick">
+      <div class="col-xs-4" id="nick">
         <h3>Nick</h3>
-      </div>
-      <div class="col-xs-3" id="kyle">
-        <h3>Kyle</h3>
       </div>
     </div>
     <div class="row text-center">
-      <div class="col-xs-3" id="eric">
+      <div class="col-xs-4" id="eric">
         <h3>Eric</h3>
       </div>
-      <div class="col-xs-3" id="ethanp">
+      <div class="col-xs-4" id="ethanp">
         <h3>Ethan P</h3>
       </div>
       <div class="col-xs-4" id="sebastian">
@@ -55,14 +52,32 @@
       </div>
     </div>
     <div class="row text-center">
-      <div class="col-xs-3" id="steve">
+      <div class="col-xs-4" id="steve">
         <h3>Steve</h3>
       </div>
-      <div class="col-xs-3" id="justin">
+      <div class="col-xs-4" id="justin">
         <h3>Justin</h3>
       </div>
-      <div class="col-xs-3" id="ethang">
+      <div class="col-xs-4" id="ethang">
         <h3>Ethan G</h3>
+      </div>
+    </div>
+    <div class="row text-center">
+      <div class="col-xs-4" id="kyle">
+        <h3>Kyle</h3>
+      </div>
+      <div class="col-xs-4" id="will">
+        <h3>Will</h3>
+      </div>
+      <div class="col-xs-4" id="colin">
+        <h3>Colin</h3>
+      </div>
+    </div>
+    <div class="row" id="footer">
+      <div class="col-xs-6 col-xs-offset-3">
+        <div class="alert alert-info" role="alert">
+          If you don't see anything listed under someones name, that means they have not shared their calendar with you! Ask them to share it with you
+        </div>
       </div>
     </div>
   </body>
