--- a/index.html
+++ b/index.html
@@ -77,13 +77,28 @@
           <h3>Colin</h3>
         </div>
       </div>
-      <div class="row" id="footer">
+      <div class="row" id="info">
         <div class="col-xs-6 col-xs-offset-3">
           <div class="alert alert-info" role="alert">
             If you don't see anything listed under someones name, that means they have not shared their calendar with you! Ask them to share it with you
           </div>
         </div>
       </div>
+      <footer class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="">
+                <p class="text-muted">&copy;&nbsp;David San Antonio 2016</p>
+            </div>
+            <div class="col-xs-4">
+              <p class="text-muted">Page is powered by <a href="https://developers.google.com/google-apps/calendar/">Google Calendar API</a></p>
+            </div>
+            <div class="col-xs-4">
+              <p class="text-muted">Code is hosted on <a href="https://github.com/mills561/mills561.github.io">Github</a></p>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
