--- a/index.html
+++ b/index.html
@@ -87,18 +87,10 @@
         </div>
       </div>
     </div>
-    <footer class="footer">
+    <footer class="footer text-center">
       <div class="container">
         <div class="row">
-          <div class="col-xs-4">
-              <p class="text-muted">&copy;&nbsp;David San Antonio 2016</p>
-          </div>
-          <div class="col-xs-4">
-            <p class="text-muted">Page is powered by <a href="https://developers.google.com/google-apps/calendar/">Google Calendar API</a></p>
-          </div>
-          <div class="col-xs-4">
-            <p class="text-muted">Code is hosted on <a href="https://github.com/mills561/mills561.github.io">Github</a></p>
-          </div>
+            <p class="text-muted">&copy;&nbsp;David San Antonio 2016 | <a href="https://developers.google.com/google-apps/calendar/">Google Calendar API</a>&nbsp;<a href="https://github.com/mills561/mills561.github.io">Github</a></p>
         </div>
       </div>
     </footer>
