--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <footer class="footer text-center">
       <div class="container">
         <div class="row">
-            <p class="text-muted">&copy;&nbsp;David San Antonio 2016 | <a href="https://developers.google.com/google-apps/calendar/">Google Calendar API</a>&nbsp;<a href="https://github.com/mills561/mills561.github.io">Github</a></p>
+            <p class="text-muted">&copy;&nbsp;David San Antonio 2016 | <a href="https://developers.google.com/google-apps/calendar/">Google Calendar API</a> | <a href="https://github.com/mills561/mills561.github.io">Github</a></p>
         </div>
       </div>
     </footer>
