Changed HTML to account for auto update.

--- a/index.html
+++ b/index.html
@@ -35,47 +35,59 @@
       </div>
       <div id="hide-if-authorizing">
         <div class="row text-center">
-          <div class="col-xs-4" id="david">
+          <div class="col-xs-4">
             <h3>David</h3>
+            <div id="david"></div>
           </div>
-          <div class="col-xs-4" id="shawn">
+          <div class="col-xs-4">
             <h3>Shawn</h3>
+            <div id="shawn"></div>
           </div>
-          <div class="col-xs-4" id="nick">
+          <div class="col-xs-4">
             <h3>Nick</h3>
+            <div id="nick"></div>
           </div>
         </div>
         <div class="row text-center">
-          <div class="col-xs-4" id="eric">
+          <div class="col-xs-4">
             <h3>Eric</h3>
+            <div id="eric"></div>
           </div>
-          <div class="col-xs-4" id="ethanp">
+          <div class="col-xs-4">
             <h3>Ethan P</h3>
+            <div id="ethanp"></div>
           </div>
-          <div class="col-xs-4" id="sebastian">
+          <div class="col-xs-4">
             <h3>Sebastian</h3>
+            <div id="sebastian"></div>
           </div>
         </div>
         <div class="row text-center">
-          <div class="col-xs-4" id="steve">
+          <div class="col-xs-4">
             <h3>Steve</h3>
+            <div id="steve"></div>
           </div>
-          <div class="col-xs-4" id="justin">
+          <div class="col-xs-4">
             <h3>Justin</h3>
+            <div id="justin"></div>
           </div>
-          <div class="col-xs-4" id="ethang">
+          <div class="col-xs-4">
             <h3>Ethan G</h3>
+            <div id="ethang"></div>
           </div>
         </div>
         <div class="row text-center">
-          <div class="col-xs-4" id="kyle">
+          <div class="col-xs-4">
             <h3>Kyle</h3>
+            <div id="kyle"></div>
           </div>
-          <div class="col-xs-4" id="will">
+          <div class="col-xs-4">
             <h3>Will</h3>
+            <div id="will"></div>
           </div>
-          <div class="col-xs-4" id="colin">
+          <div class="col-xs-4">
             <h3>Colin</h3>
+            <div id="colin"></div>
           </div>
         </div>
         <div class="row" id="info">
