--- a/darts/index.html
+++ b/darts/index.html
@@ -26,29 +26,29 @@
   </head>
   <body ng-app="darts" ng-controller="myCtrl" class="container">
     <div class="row text-center" id="top">
-      <div class="col-md-5">
+      <div class="col-xs-4">
         <h3 ng-click="showHideFirstName()" ng-show="showFirstName">{{firstName}}</h3>
         <input type="text" name="firstName" ng-show="!showFirstName" ng-enter="showHideFirstName()" ng-model="firstName" placeholder="Enter name..." />
       </div>
-      <div class="col-md-2">
+      <div class="col-xs-4">
         <h3>Cricket</h3>
       </div>
-      <div class="col-md-5">
+      <div class="col-xs-4">
         <h3 ng-click="showHideSecondName()" ng-show="showSecondName">{{secondName}}</h3>
         <input type="text" name="secondName" ng-show="!showSecondName" ng-enter="showHideSecondName()" ng-model="secondName" placeholder="Enter name..." />
       </div>
     </div>
     <div class="row text-center">
-      <div class="col-md-12">
+      <div class="col-xs-12">
         <div class="row" ng-repeat="i in getNumber(7) track by $index">
-          <div class="col-md-5 rightBorder">
-            <h3>Check mark</h3>
+          <div class="col-xs-4 rightBorder">
+            <h3><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></h3>
           </div>
-          <div class="col-md-2 rightBorder">
+          <div class="col-xs-4">
             <h3>{{value[$index]}}</h3>
           </div>
-          <div class="col-md-5">
-            <h3>Check mark</h3>
+          <div class="col-xs-4 leftBorder">
+            <h3><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></h3>
           </div>
         </div>
       </div>
