--- a/chains/fast/index.html
+++ b/chains/fast/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
 
     <!-- jQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -21,36 +21,29 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js"></script>
 
     <!-- Custom js -->
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
   </head>
-  <body class="container-fluid" ng-app="chain" ng-controller="myCtrl">
+  <body lass="container-fluid" ng-app="chain" ng-controller="myCtrl">
     <div class="row page-header text-center">
-      <h1>Chain Reaction</h1>
+      <h1>Chain Reaction: <small>Fast Money</small></h1>
     </div>
     <div class="row text-center">
-      <div class="col-xs-5">
-        <input type="text" placeholder="Team 1" />
-        Score: {{teamOneScore}}
-        <button class="btn btn-default" ng-click="addTeamOneScore()">Add Score</button>
+      <div class="col-xs-12">
+        <h2 class="inline">Score: <sup>{{total}}</sup>&frasl;<sub>7</sub></h2>
+        <h2 class="inline">Time: {{time}}</h2>
+        <br />
+        <button class="btn btn-default" ng-click="enterWords = true" ng-hide="timerStarted || enterWords">Enter words</button>
+        <div ng-show="enterWords">
+          <input type="text" ng-model="wordToAdd" placeholder="Enter word here" id="addWords" />
+          <button class="btn btn-default" ng-click="addWord()">Add to list</button>
+          {{7 - fastMoneyWords.length}} words left to add
+        </div>
+        <div ng-show="timerStarted">
+          <h1>{{fastMoneyWords[currentWord]}}</h1>
+          <button class="btn btn-success" ng-click="newWord(true)">Correct</button>
+          <button class="btn btn-danger" ng-click="newWord(false)">Incorrect</button>
+        </div>
       </div>
-      <div class="col-xs-2">
-        Score to Add: <input type="number" ng-model="score" />
-      </div>
-      <div class="col-xs-5">
-        <input type="text" placeholder="Team 1" />
-        Score: {{teamTwoScore}}
-        <button class="btn btn-default" ng-click="addTeamTwoScore()">Add Score</button>
-      </div>
-    </div>
-    <div class="row text-center">
-      <input type="text" class="word" /><br />
-      <input type="text" class="word" /><br />
-      <input type="text" class="word" /><br />
-      <input type="text" class="word" /><br />
-      <input type="text" class="word" /><br />
-      <input type="text" class="word" /><br />
-      <input type="text" class="word" />
-      <a class="btn btn-default" href="/fast">Fast Money</a>
     </div>
     <footer class="footer text-center">
       <div class="container">
