Fixed link to fast money round

--- a/chains/index.html
+++ b/chains/index.html
@@ -49,8 +49,8 @@
       <input type="text" class="word" /><br />
       <input type="text" class="word" /><br />
       <input type="text" class="word" /><br />
-      <input type="text" class="word" />
-      <a class="btn btn-default" href="/fast">Fast Money</a>
+      <input type="text" class="word" /><br /><br />
+      <a class="btn btn-default" href="fast/">Fast Money</a>
     </div>
     <footer class="footer text-center">
       <div class="container">
