Added skipping mechanism for fast money round

--- a/chains/fast/index.html
+++ b/chains/fast/index.html
@@ -41,7 +41,7 @@
         <div ng-show="timerStarted">
           <h1>{{fastMoneyWords[currentWord]}}</h1>
           <button class="btn btn-success" ng-click="newWord(true)">Correct</button>
-          <button class="btn btn-danger" ng-click="newWord(false)">Incorrect</button>
+          <button class="btn btn-warning" ng-click="newWord(false)">Skip</button>
         </div>
       </div>
     </div>
